# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-08-31 17:54:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-63

    Summary:
      First try of lazyStream class
    Revision:
      missinglib--head--0.0--patch-63


    new files:
     libsrc/bnf/bNFsupport.mli

    modified files:
     ChangeLog libsrc/Makefile libsrc/bnf/bNFsupport.ml


2004-08-31 17:21:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-62

    Summary:
      Added BNF infrastructure
    Revision:
      missinglib--head--0.0--patch-62


    new files:
     libsrc/bnf/.arch-ids/=id libsrc/bnf/bNFsupport.ml

    modified files:
     ChangeLog

    new directories:
     libsrc/bnf libsrc/bnf/.arch-ids


2004-08-20 14:38:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-61

    Summary:
      Fixed syntax error
    Revision:
      missinglib--head--0.0--patch-61


    modified files:
     ChangeLog libsrc/strutil/strutil.ml


2004-08-20 14:37:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-60

    Summary:
      Added new Strutil.trunc function.
    Revision:
      missinglib--head--0.0--patch-60


    modified files:
     ChangeLog debian/changelog libsrc/strutil/strutil.ml
     libsrc/strutil/strutil.mli


2004-08-06 21:54:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-59

    Summary:
      Fixed silly brainos
    Revision:
      missinglib--head--0.0--patch-59


    modified files:
     ChangeLog libsrc/unixutil/unixutil.ml


2004-08-06 21:51:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-58

    Summary:
      Added new abspath and isdir functions to Unixutil
    Revision:
      missinglib--head--0.0--patch-58


    modified files:
     ChangeLog debian/changelog libsrc/unixutil/unixutil.ml
     libsrc/unixutil/unixutil.mli


2004-08-04 19:58:06 GMT	John Goerzen <jgoerzen@complete.org>	patch-57

    Summary:
      Added README
    Revision:
      missinglib--head--0.0--patch-57

